# multiblock

./: .gitignore  CMakeLists.txt  README.md  environment.yml  post_built_vmtk.sh  pyproject.toml
.conda/: post-link.sh  post_link.sh
.github/workflows/: ci.yml
include/fastvessels/: io_utils.hpp  vtk_to_vdb_converter.hpp
src/: io_utils.cpp  main.cpp  vtk_to_vdb_converter.cpp
tests/: CMakeLists.txt  test_io_utils.cpp
tests/data/: cube_1x1x1.stl
