[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiblock"
version = "0.1.0"
description = "Generate realistic synthetic CT volumes from closed 3D surface meshes — voxelize, assign Hounsfield units, and simulate imaging blur/noise for AI and visualization demos."
authors = [
  { name = "Arash Ghorbannia", email = "aghorban@odu.edu" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "scikit-image",
  "trimesh",
  "nibabel",
  "click",
  "pyyaml",
  "rich"
]

[project.optional-dependencies]
vtk = ["vtk>=9.2", "vmtk>=1.5"]
dev = ["pytest", "pytest-cov", "black", "flake8", "isort"]

[project.scripts]
multiblock = "multiblock.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multiblock = ["*.yaml"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=1 --disable-warnings -q"
